--- a/scripts/network_analysis.Rmd
+++ b/scripts/network_analysis.Rmd
@@ -42,8 +42,83 @@ plot_data %>%
         axis.ticks.x =element_blank())
 ```
 
+Exploratory network analysis \n
+```{r}
+gsize(graph_artists) #size
+edge_density(graph_artists) #density
+count_components(graph_artists) #components
+diameter(graph_artists, directed = F) #diameter
+transitivity(graph_artists) #clustering
+```
+
 
 # Hypothesis 1
+As a first step, the centrality measures are calculated.
+```{r}
+
+```
+
+Regression model
+```{r}
+regression <- lm(streams ~ degree + betweenness + closeness + eigenvector,
+                 data = metrics_log, na.action = na.exclude)
+```
+
+Diagnostics
+#1 Linearity
+```{r}
+avPlots(regression)
+```
+#2 No multicollinearity
+```{r}
+CT <- cbind(metrics_log$degree, metrics_log$betweenness, metrics_log$closeness,
+            metrics_log$eigenvector)
+rcorr(CT)
+
+vif(regression)
+```
+#3 Homoskedasticity of the residuals
+```{r}
+plot(regression, 1)
+
+bptest(regression)
+```
+#4 Normality of the residuals
+```{r}
+hist(regression$residuals, breaks= 30, freq = F,
+     main = "Distribution of residuals",
+     xlab = "Residuals")
+curve(dnorm(x, mean(regression$residuals), sd(regression$residuals)), 
+      col = "red",
+      add = T)
+plot(regression, 2)
+```
+
+#5 No influential points
+```{r}
+plot(regression, 4)
+```
+Display regression
+```{r}
+#show regression model
+stargazer(regression, type = "text")
+
+#show regression model with robust standard errors
+stargazer(coeftest(regression, vcov=vcovHC(regression, type = c("HC3"))),
+          type = "text")
+```
+Bootstrapping
+```{r}
+#repeat regression modelling, but omit missing values for bootstrapping
+regression2 <- lm(impenv ~ edlvdch + lrscale + agea + gndr2 + rlgn+ residence +
+                   hinctnta, data = na.omit(ESS9_CH_MIN))
+
+#bootstrapping
+bootstrap_regression <- Boot(regression2, R=5000)
+summary(bootstrap_regression)
+confint(bootstrap_regression, level = 0.95)
+```
+
 
 
 # Hypothesis 2
