--- a/scripts/penalized_regression.Rmd
+++ b/scripts/penalized_regression.Rmd
@@ -18,6 +18,12 @@ source(here::here("scripts", "preparation.R"))
 Because there is a significant multicollinearity, which can be explained theoretically, a penalized linear regression model with an elastic net is applied.
 
 ### according to [David Dalpiaz](https://daviddalpiaz.github.io/r4sl/elastic-net.html)
+
+```{r}
+# set up data
+no_nas <- na.omit(metrics_minmax %>% select(-c(closeness, gs_closeness))) # remove NAs and closeness
+```
+
 ```{r}
 set.seed(42)
 # set up 10 fold CV
@@ -121,6 +127,11 @@ enr_preds %>%
   ggplot(aes(x = pop, y = preds)) +
   geom_point() +
   geom_abline(col = "red", size = 1)
+
+
+# Calculate deviance explained
+null_deviance <- sum((plm_y - mean(plm_y))^2)
+deviance_explained <- 1 - (sum((plm_y - plm_y_pred)^2) / null_deviance)
 ```
 
 
