removed ChatGPT stuff.

--- a/scripts/penalized_regression.Rmd
+++ b/scripts/penalized_regression.Rmd
@@ -128,81 +128,39 @@ enr_preds %>%
   geom_point() +
   geom_abline(col = "red", size = 1)
 
+# Calculate the mean squared error (MSE)
+mse <- mean((y - enr_preds$preds)^2)
 
 # Calculate deviance explained
 null_deviance <- sum((y - mean(y))^2)
-deviance_explained <- 1 - (sum((y - enr_preds)^2) / null_deviance)
+deviance_explained <- 1 - (sum((y - enr_preds$preds)^2) / null_deviance)
 ```
 
 
-
-
-
-### according to ChatGPT
-```{r}
-no_nas <- na.omit(metrics_minmax %>% select(-c(closeness, gs_closeness)))
-# Separate the independent variables and the dependent variable
-plm_x <- as.matrix(no_nas[, c("degree", "betweenness", "eigenvector", "closeness")])
-plm_y <- no_nas$popularity
-
-# Perform penalized linear regression using glmnet
-penalized_regression <- glmnet(plm_x, plm_y)
-
-# Set up lambda values for tuning
-lambda_seq <- 10^seq(-2, 2, by = 0.5)
-
-# Perform cross-validation to tune the lambda parameter
-cv_result <- cv.glmnet(plm_x, plm_y, lambda = lambda_seq)
-
-# Find the optimal lambda value
-optimal_lambda <- cv_result$lambda.min
-
-# Fit the penalized regression model with the optimal lambda
-penalized_regression_optimal <- glmnet(plm_x, plm_y, lambda = optimal_lambda)
-
-# Predict the response variable using the optimal model
-plm_y_pred <- predict(penalized_regression_optimal, newx = plm_x)
-
-# Calculate the mean squared error (MSE)
-mse <- mean((plm_y - plm_y_pred)^2)
-
-# Calculate deviance explained
-null_deviance <- sum((plm_y - mean(plm_y))^2)
-deviance_explained <- 1 - (sum((plm_y - plm_y_pred)^2) / null_deviance)
-```
-
-"When a penalized regression model, such as ridge regression or lasso regression, returns a coefficient with no value (i.e., NA or zero), it typically indicates that the corresponding predictor variable has been effectively excluded from the model.
-
-In penalized regression, the regularization penalty is applied to the model to shrink the coefficients towards zero. This penalty encourages sparsity in the model, meaning that some coefficients may be set exactly to zero. This is particularly the case in lasso regression, where the L1 penalty promotes exact zeroing of coefficients, resulting in variable selection.
-
-When a coefficient has no value in the output, it means that the corresponding predictor variable does not contribute to the model's predictions or is deemed less important by the regularization process. In other words, the model has effectively removed or excluded that variable from the final model.
-
-It's important to note that the exclusion of a variable does not necessarily mean it is irrelevant or unimportant in the broader context. The penalized regression model is making a trade-off between simplicity and prediction accuracy, and the excluded variables may not significantly improve the model's performance compared to the remaining variables.
-
-If you believe that a particular variable is important and should be included in the model, you may consider adjusting the regularization parameter (lambda) or trying alternative regression techniques that do not enforce sparsity, such as ordinary least squares (OLS) regression" (ChatGPT, 24.06.2023).
 ```{r}
 # Print the coefficients and R-squared of the optimal model
-print(coef(penalized_regression_optimal))
+print(coef(fit_enr_cv))
 print(paste("MSE:", mse))
 print(paste("Deviance Explained:", deviance_explained))
 ```
 
 ```{r}
-plot(penalized_regression, xvar = "lambda", label = TRUE)
+plot(fit_enr_cv, xvar = "lambda")
+plot(fit_enr_cv, xvar = "alpha")
 
 
 # Plot the predicted values and the original values
-plot(plm_y, type = "o", col = "blue", ylim = range(c(plm_y, plm_y_pred)), 
+plot(y, type = "o", col = "blue", ylim = range(c(y, regular_reg)), 
      xlab = "Observation", ylab = "Value", main = "Predicted vs Original Values")
-lines(plm_y_pred, type = "o", col = "red")
+lines(enr_preds$preds, type = "o", col = "red")
 legend("topright", legend = c("Original", "Predicted"), 
        col = c("blue", "red"), pch = c(1, 1))
 
 
 # Plot
 ggplot2::ggplot() +
-  ggplot2::geom_point(data = as.data.frame(cbind(plm_y, plm_y_pred)),
-                mapping = aes(x = plm_y, y = s0, col = "royalblue4")) +
+  ggplot2::geom_point((data = enr_preds),
+                mapping = aes(x = pop, y = preds, col = "royalblue4")) +
   ggplot2::geom_smooth(method = "lm", se = F, col = "red")
 #plot(metrics_minmax$streams, plm_y_pred)
 #abline(metrics_minmax$streams, plm_y_pred)
