changed some deprecation issues.

--- a/scripts/network_analysis.Rmd
+++ b/scripts/network_analysis.Rmd
@@ -25,8 +25,8 @@ freq_streams <- global %>%
         axis.text.x = element_text(color="black", size=12, family="serif"),
         axis.ticks.x = element_line(),
         axis.ticks.y = element_line(),
-        axis.line.x = element_line(size=0.5, color="grey"),
-        axis.line.y = element_line(size=0.5, color="grey"),
+        axis.line.x = element_line(linewidth=0.5, color="grey"),
+        axis.line.y = element_line(linewidth=0.5, color="grey"),
         panel.grid = element_line(color = "honeydew2",
                                   size = 0.5,
                                   linetype = 1),
@@ -60,8 +60,8 @@ freq_popularity <- metrics %>%
         axis.text.x = element_text(color="black", size=12, family="serif"),
         axis.ticks.x = element_line(),
         axis.ticks.y = element_line(),
-        axis.line.x = element_line(size=0.5, color="grey"),
-        axis.line.y = element_line(size=0.5, color="grey"),
+        axis.line.x = element_line(linewidth=0.5, color="grey"),
+        axis.line.y = element_line(linewidth=0.5, color="grey"),
         panel.grid = element_line(color = "honeydew2",
                                   size = 0.5,
                                   linetype = 1),
